--- a/css/background/background.css
+++ b/css/background/background.css
@@ -1,27 +1,69 @@
 .background-container {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
+    background-color: #020014;
 }
 
 .main-background {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("../../static/backgrounds/mainBackground13Iphone.svg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-
+    background-position: center top;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    overflow: hidden;
 }
 
-/*iPhone 8 */
+@media (max-width: 380px) {
+    .main-background {
+        background-size: 110%;
+        background-position-y: calc(0% - 10px);
+    }
+}
+
+@media (max-height: 740px) {
+    .main-background {
+        background-size: 115%;
+        background-position-y: calc(0% - 20px);
+    }
+}
+
+@media (max-height: 680px) {
+    .main-background {
+        background-size: 120%;
+        background-position-y: calc(0% - 32px);
+    }
+}
+
+/*iPhone 8/SE*/
 @media (width: 375px) and (height: 667px) {
     .main-background {
         background-image: url("../../static/backgrounds/mainBackground8Iphone.svg");
+        background-size: 100% 100%;
+        background-position: center top;
+        background-position-y: 0;
+    }
+}
+
+/*iPhone 8Plus*/
+@media (width: 414px) and (height: 736px) {
+    .main-background {
+        background-size: 112%;
+        background-position-y: calc(0% - 28px);
+    }
+}
+
+/*iPhone 12*/
+@media (width: 390px) and (height: 844px) {
+    .main-background {
+        background-size: 102%;
+        background-position-y: 0;
     }
 }
